<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/dp_10">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal">


        <com.kproduce.roundcorners.RoundRelativeLayout
            android:id="@+id/ll_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_30"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginEnd="@dimen/dp_10"
            android:layout_toStartOf="@+id/tv_cancel"
            android:background="@color/colorPrimary"
            android:paddingEnd="@dimen/dp_10"
            app:rLeftRadius="@dimen/dp_10"
            app:rRightRadius="@dimen/dp_10"
            app:rStrokeColor="@color/colorGray4"
            app:rStrokeWidth="@dimen/dp_1">

            <ImageView
                android:id="@+id/iv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_8"
                android:layout_marginEnd="@dimen/dp_8"
                android:src="@drawable/icon_search" />

            <EditText
                android:id="@+id/et_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:layout_toStartOf="@+id/iv_delete1"
                android:layout_toEndOf="@+id/iv_search"
                android:background="@null"
                android:hint="@string/text_input_search"
                android:imeOptions="actionSearch"
                android:lines="1"
                android:maxEms="10"
                android:maxLength="15"
                android:singleLine="true"
                android:textColor="@color/colorContent"
                android:textColorHint="@color/tab_normal"
                android:textSize="12sp" />

            <ImageView
                android:id="@+id/iv_delete1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/icon_delete" />
        </com.kproduce.roundcorners.RoundRelativeLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/text_cancel"
            android:textColor="@color/text_color"
            android:textSize="12sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_search_con"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/rl_history"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="@dimen/dp_10">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_10"
                android:text="@string/text_history_search"
                android:textColor="@color/text_color"
                android:textSize="@dimen/sp_14" />

            <ImageView
                android:id="@+id/delete_iv"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingEnd="@dimen/dp_10"
                android:src="@drawable/ic_delete" />
        </RelativeLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:text="@string/text_hot_search"
            android:textColor="@color/text_color"
            android:textSize="@dimen/sp_14" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_hot_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:overScrollMode="never">

        </androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>

    <com.xuexiang.xui.widget.statelayout.MultipleStatusView
        android:id="@+id/multiple_status_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/dp_10"
        app:msv_emptyView="@layout/layout_common_no_data"
        android:visibility="gone"
        >

        <com.scwang.smart.refresh.layout.SmartRefreshLayout
            android:id="@+id/srl_common"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_search_result"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.scwang.smart.refresh.layout.SmartRefreshLayout>
    </com.xuexiang.xui.widget.statelayout.MultipleStatusView>


</LinearLayout>
